# BlogDjango

./: .env.example  Dockerfile  Makefile  README.md  SECURITY.md  create_superuser.py  docker-compose.yml  mysite_data.json  pyproject.toml  requirements.txt  schema.yml
accounts/: context_processors.py  forms.py  models.py  pipeline.py  signals.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_alter_profile_avatar.py
backups/: backup_20250606_135059.sql
blog/: admin.py  forms.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_alter_post_slug.py  0003_comment.py  0004_post_tags.py
blog/templates/blog/: base.html
blog/templates/blog/post/: detail.html  latest_posts.html  list.html  search.html
blog/templates/blog/post/includes/: comment_form.html
blog/templates/registration/: login.html  signup.html
blog/templatetags/: blog_tags.py
blog_api/: models.py  permissions.py  serializers.py  urls.py  views.py
config/: settings.py  urls.py
templates/: pagination.html
templates/blog/: base.html
templates/blog/post/: detail.html  list.html  search.html  share.html
templates/blog/post/includes/: comment_form.html
templates/registration/: change_password.html  login.html  logout.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_email.html  password_reset_form.html  password_reset_subject.txt  profile.html  signup.html  social_auth_error.html
