[tool.poetry]
name = "blogdjango"
version = "0.1.0"
description = ""
authors = ["smtronic <aasmolnikov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.7"
django = "^5.1.3"
django-taggit = "^6.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
