[tool.poetry]
name = "blogdjango"
version = "0.1.0"
description = ""
authors = ["smtronic <aasmolnikov@gmail.com>"]
readme = "README.md"
package-mode = false


[tool.poetry.dependencies]
python = "3.12.7"
django = "^5.1.3"
django-taggit = "^6.1.0"
markdown = "^3.7"
python-dotenv = "^1.0.1"
psycopg = {extras = ["binary"], version = "^3.2.3"}
pillow = "^11.0.0"
social-auth-app-django = "^5.4.2"
django-bootstrap5 = "^24.3"
djangorestframework = "^3.15.2"
django-filter = "^24.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
