[project]
name = "blogdjango"
version = "0.1.0"
description = ""
authors = [{name = "smtronic", email = "aasmolnikov@gmail.com"}]
readme = "README.md"
requires-python = "^3.12"
dependencies = [
    "django>=5.1.3,<6.0.0",
    "django-taggit>=6.1.0,<7.0.0",
    "markdown>=3.7,<4.0.0",
    "python-dotenv>=1.0.1,<2.0.0",
    "psycopg[binary]>=3.2.3,<4.0.0",
    "pillow>=11.0.0,<12.0.0",
    "social-auth-app-django>=5.4.2,<6.0.0",
    "django-bootstrap5>=24.3,<25.0.0",
    "djangorestframework>=3.15.2,<4.0.0",
    "django-filter>=24.3,<25.0.0",
    "drf-spectacular>=0.28.0,<1.0.0",
    "python-decouple>=3.8,<4.0.0"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
